--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/frontend",
+            "outputPath": "dist/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -43,10 +43,10 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
-               },
+                },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "8kb", 
+                  "maximumWarning": "8kb",
                   "maximumError": "8kb"
                 }
               ],
